# obs-scene-lighting

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  buildspec.json  cspell.yml  project-words.txt  vcpkg.json
.github/: copilot-instructions.md
.github/workflows/: code-quality.yml  release.yml
cmake/common/: bootstrap.cmake  buildnumber.cmake  buildspec_common.cmake  osconfig.cmake
cmake/windows/: buildspec.cmake  compilerconfig.cmake  cpack.cmake  defaults.cmake  helpers.cmake
data/: scene_lighting.effect
data/locale/: en-US.ini  ja-JP.ini
doc/: architecture.md  logic.md  try-and-error.md
scripts/: clean.ps1  install-portable-obs.ps1  release.ps1
src/: obs-scene-lighting.cpp
